WIP: Save uncommitted changes before migration